...
    <RelativeLayout
        android:id="@+id/text_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <!--<ImageView
            android:id="@+id/help_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/margin_standard"
            android:visibility="gone"
...
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/guidance_text_view"
            style="@style/TextAppearance.Collect.Subtitle1.MediumEmphasis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Guidance text" />
    </LinearLayout>

...
